--- a/src/style/Example1.css
+++ b/src/style/Example1.css
@@ -4,15 +4,16 @@
     margin-top: 100px;
 }
 input, textarea{
-    display:block;
+    display:flex;
     width: 15%;
     padding: .5rem .8rem .5rem .8rem;
-    margin-left: 600px;
     border:0;
     border-radius: 5px;
     font-size: 20px;
     align-items: center;
     text-align: center;
+    justify-content: center;
+    margin:auto;
 }
 button{
    
