--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -3,13 +3,13 @@ h1.title{
     justify-Content:center;
     align-Items:center;
     height: 20vh;
-    color:white;
+    color:#435058;
 }
 
 h2.title{
     display: flex;
     justify-Content:center;
     align-Items:center;
-    color:white;
+    color:#435058;
     
 }
